<?xml version="1.0" encoding="utf-8"?>

<resources>
    
    <string name="app_name">M1浏览器</string>
    <string name="Main.DownloadStartedMsg">开始下载</string>
    <string name="Main.DownloadFinishedMsg">完成下载</string>
    <string name="Commons.Ok">确定</string>
    <string name="Commons.Cancel">取消</string>
    <string name="Commons.PleaseWait">温馨提示</string>
    <string name="Commons.ClearingHistory">正在删除历史记录</string>
    <string name="Commons.SDCardErrorTitle">SD卡不可用</string>
    <string name="Commons.SDCardErrorNoSDMsg">未发现SD卡</string>
    <string name="Commons.SDCardErrorSDUnavailable">SD卡不可用</string>
    <string name="Commons.UrlCopyToastMessage">已复制到剪贴板</string>

    <string name="Main.FileChooserPrompt">选择上传文件</string>
    <string name="HistoryListActivity.BookmarkAdded">添加到书签</string>
    <string name="HistoryListActivity.BookmarkRemoved">删除书签</string>   
    <string name="HttpAuthenticationDialog.DialogTitle">Sign in to %1$s - %2$s</string>
    <string name="Commons.Proceed">Proceed</string>
    <string name="VideoLoading">视频正在加载中...</string>
    <string name="HttpAuthenticationDialog.UserName">Name</string>
    <string name="HttpAuthenticationDialog.Password">Password</string>
    <string name="webviewfail.shibai1">页面访问失败</string>
    <string name="webviewfail.shibai2">页面访问出错了，您可以尝试以下操作：</string>
    <string name="webviewfail.shibai3">检查网络信号或数据连接是否正常</string>
    <string name="webviewfail.shibai4">检查您输入的网址是否正确</string>
    <string name="webviewfail.shibai5">可能是页面出现故障暂停访问</string>
    <string name="webviewfail.shibai.shuju">数据</string>
    <string name="webviewfail.shibai.shuaxin">刷新</string>
    <string name="webviewfail.shibai.daohang">导航</string>
    <string name="QuickAction.Find">页面上找到</string>
    <string name="SearchDialog.Hint">页面上找到</string>
    
    <!-- push -->
    <string name="bangdan">榜单</string>
    <string name="mianfeixiazai">免费下载</string>
    <string name="guanbi">关闭</string>
    
    <!-- app lock -->
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    
    <!-- ZXing -->
    <string name="saoma">扫码</string>
    <string name="xiangce">相册</string>
    <string name="wode">我的</string>
    <string name="saoyisao">扫一扫</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">剪切板清空</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_read_book">浏览本书</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_share">分享</string>
    <string name="msg_buggy">该器件具有已知的错误导致条形码扫描问题。为了 更多信息，请访问 http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
    <string name="msg_bulk_mode_scanned">散装模式：条码扫描，并保存</string>
    <string name="msg_camera_framework_bug">很抱歉，机器人相机出现问题。您可能需要重新启动设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_wen_jian_ming">文件名</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">将条码放置于镜头范围内进行扫描。</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_barcode_failed">找不到条码。</string>
    <string name="msg_encode_contents_failed">不能从已有数据中读取条码。</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物结合条码扫描价格，评论和不打开浏览器。您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_loading_apps">装载应用名单</string>
    <string name="msg_not_our_results">你离开此应用程序。搜索结果，您会看到的都没有涉及这个应用程序</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">没有返回页面</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_searching_book">搜索图书</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">你可以在你的手机屏幕上显示条码，并使用其他手机扫描此条码方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_unmount_usb">对不起，SD卡是不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存许多条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary">使用％s作为产品ID占位</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">解码一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">数据矩阵码解码</string>
    <string name="preferences_decode_QR_title">解码QR条码</string>
    <string name="preferences_front_light_summary">使前灯如果可用</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">当扫描条形码</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="wa_name">网络配置</string>
    <string name="wifi_changing_network">不断变化的网络</string>
    <string name="wifi_connected">连接的</string>
    <string name="wifi_creating_network">创建网络</string>
    <string name="wifi_modifying_network">修改网络</string>
    <string name="wifi_ssid_missing">网络实名失踪</string>
    <string name="wifi_type_incorrect">网络类型不正确</string>
    <string name="wifi_connect_failed">网络连接失败</string>
    <string name="wifi_ssid_label">网络名称</string>
    <string name="wifi_type_label">类型</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
</resources>
